syntax = "proto3";

option csharp_namespace = "GrpcPiControl";
package PiControl;

// 라즈베리파이와 통신하기 위한 서비스 정의
service PiControlService {
    // 라즈베리파이에서 이미지를 캡처하고 서버로 전송하는 요청
    rpc CaptureAndSendImage (PiRequest) returns (PiResponse);
}

// 라즈베리파이 요청 메시지
message PiRequest {
    string ProductID = 1; // 제품 ID
    int32 Quantity = 2;   // 캡처할 이미지의 수량
}

// 라즈베리파이 응답 메시지
message PiResponse {
    int32 ErrorCode = 1;     // 처리 상태 코드 (0: 성공, -1: 실패 등)
    string Message = 2;      // 처리 상태 메시지
    string DefectType = 3;   // 감지된 불량 유형 (선택적)
}